Thu Oct  2 19:37:15 2003  Joern Thyssen  <jth@gnubg.org>

	* gtktheory.c (TheoryUpdated): ensure that bg <= g.

Thu Oct 2 10:59:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	play.c, gnubg.c: Added first move command

Wed Oct 1 2003 16:37:22 GMT Jim Segrave <jes@jes-2.demon.nl>

	* gtkboard.c - when changing the match length, update the limits
	  on the score spinner. Also ensure the dice are valid or not 
	  rolled. You can now increase the match length and then change a
	  score to be greater than the old match length.	

Tue Oct 1 9:38:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkprefs.c: Fixed 2d board chequer shape setting.
	* gtkpboard.c, render.c: Fixed single chequer removal from bar in edit mode

Mon Sep 29 8:33:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtktoolbar.c: Remeber last used import/export type+directory.
	* gtkgame.c: Escape key exits fullscreen mode, added removable
		warning when fullscreen mode entered.

Fri Sep 26 2003 19:18:48 GMT Jim Segrave <jes@jes-2.demon.nl>

	* play.c = missing conditional around call to HitGameClock

Fri Sep 26 2003 08:17:55 Stein Kulseth <steink@opera.com>
	* backgammon.h gnubg.c gtkgame.[ch] play.c
	  set.c tctutorial.h timecontrol.[ch]:
		bugfixes,
		GUI additions

Tue Sep 23 17:47:55 GMT 2003  Jim Segrave <jes@jes-2.demon.nl>

	* sgfp.c sgfl.c - regenerated for users who don't have working
	  flex/bison
	
Mon Sep 22 22:35:43 GMT 2003  Jim Segrave <jes@jes-2.demon.nl>

	* sgf.y - Concatenate() didn't deal with empty ValueString's
	

Mon Sep 22 19:38:07 2003  Joern Thyssen  <jth@gnubg.org>

	* rollout.c (RolloutGeneral): do not invert board for
	sanity check
	(reported by Daniel Murphy,
	http://www.gammonline.com/members/board/config.cgi?read=61387)

Sun Sep 21 18:31:55 2003  Joern Thyssen  <jth@gnubg.org>

	* eval.c (getMoneyPoints): fix bug in calculation of W and L.
	(reported by Massimiliano.Maini)

Mon Sep 22 11:50:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
